[CloudCustomers.UnitTest] Add GetAllSuers_WhenCalled_InvokesConfiguredExternalUrl

--- a/CloudCustomers.API/appsettings.Development.json
+++ b/CloudCustomers.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "UserApiOptions": {
+    "Endpoint": "https://jsonplaceholder.typicode.com/users"
   }
 }
